@@ -234,6 +234,7 @@ export(annotation_custom)
 export(annotation_logticks)
 export(annotation_map)
 export(annotation_raster)
+export(arrow)
 export(autoplot)
 export(benchplot)
 export(borders)
@@ -470,6 +471,7 @@ export(theme_minimal)
 export(theme_set)
 export(theme_update)
 export(theme_void)
+export(unit)
 export(update_geom_defaults)
 export(update_labels)
 export(update_stat_defaults)
