@@ -32,11 +32,11 @@ p + annotate("rect", xmin = 2, xmax = 3.5, ymin = 2, ymax = 25,
 
 # Geom_segment examples
 p + geom_segment(aes(x = 2, y = 15, xend = 2, yend = 25),
-  arrow = grid::arrow(length = grid::unit(0.5, "cm")))
+  arrow = arrow(length = unit(0.5, "cm")))
 p + geom_segment(aes(x = 2, y = 15, xend = 3, yend = 15),
-  arrow = grid::arrow(length = grid::unit(0.5, "cm")))
+  arrow = arrow(length = unit(0.5, "cm")))
 p + geom_segment(aes(x = 5, y = 30, xend = 3.5, yend = 25),
-  arrow = grid::arrow(length = grid::unit(0.5, "cm")))
+  arrow = arrow(length = unit(0.5, "cm")))
 
 # You can also use geom_segment to recreate plot(type = "h") :
 counts <- as.data.frame(table(x = rpois(100, 5)))
