@@ -209,7 +209,7 @@ m + theme(axis.text.y = element_blank())
 m + theme(axis.ticks = element_line(size = 2))
 m + theme(axis.title.y = element_text(size = rel(1.5), angle = 90))
 m + theme(axis.title.x = element_blank())
-m + theme(axis.ticks.length = grid::unit(.85, "cm"))
+m + theme(axis.ticks.length = unit(.85, "cm"))
 
 # Legend Attributes
 z <- ggplot(mtcars, aes(wt, mpg)) +
@@ -223,13 +223,13 @@ z + theme(legend.position = c(.5, .5))
 z + theme(legend.background = element_rect(colour = "black"))
 # Legend margin controls extra space around outside of legend:
 z + theme(legend.background = element_rect(),
-          legend.margin = grid::unit(1, "cm"))
+          legend.margin = unit(1, "cm"))
 z + theme(legend.background = element_rect(),
-          legend.margin = grid::unit(0, "cm"))
+          legend.margin = unit(0, "cm"))
 # Or to just the keys
 z + theme(legend.key = element_rect(colour = "black"))
 z + theme(legend.key = element_rect(fill = "yellow"))
-z + theme(legend.key.size = grid::unit(2.5, "cm"))
+z + theme(legend.key.size = unit(2.5, "cm"))
 z + theme(legend.text = element_text(size = 20, colour = "red", angle = 45))
 z + theme(legend.title = element_text(face = "italic"))
 
@@ -259,8 +259,8 @@ k + theme(strip.background = element_rect(colour = "purple", fill = "pink",
                                           size = 3, linetype = "dashed"))
 k + theme(strip.text.x = element_text(colour = "red", angle = 45, size = 10,
                                       hjust = 0.5, vjust = 0.5))
-k + theme(panel.margin = grid::unit(5, "lines"))
-k + theme(panel.margin.y = grid::unit(0, "lines"))
+k + theme(panel.margin = unit(5, "lines"))
+k + theme(panel.margin.y = unit(0, "lines"))
 
 # Put gridlines on top
 meanprice <- tapply(diamonds$price, diamonds$cut, mean)
